[gd_scene load_steps=17 format=2]

[ext_resource path="res://weapons/BulletManager.gd" type="Script" id=1]
[ext_resource path="res://actors/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/Main.gd" type="Script" id=3]
[ext_resource path="res://Globals/Environment.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/prototypes/DubsteptrixRegular-OK74.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/prototypes/When Shapes Attack.wav" type="AudioStream" id=6]
[ext_resource path="res://Globals/SpawnPoints.tscn" type="PackedScene" id=8]
[ext_resource path="res://Globals/PlayerSounds.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/StartTimer.gd" type="Script" id=10]
[ext_resource path="res://assets/prototypes/2nd Dimension.wav" type="AudioStream" id=11]

[sub_resource type="Environment" id=1]
background_mode = 4
auto_exposure_scale = 4.73
glow_enabled = true
glow_intensity = 0.04
glow_blend_mode = 0

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer2:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:bus")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Master" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "audio_fade"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -50.689, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 4.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "enter_scene"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Environment/ProtoStage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0.85, 0.85 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "scene_change"
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 1104, 249 )

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Environment" parent="." instance=ExtResource( 4 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="SpawnPoints" parent="." instance=ExtResource( 8 )]

[node name="PlayerSounds" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 4 )
anims/audio_fade = SubResource( 3 )
anims/enter_scene = SubResource( 2 )
anims/scene_change = SubResource( 5 )

[node name="StartTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 2.0
one_shot = true
script = ExtResource( 10 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Label" type="Label" parent="."]
visible = false
self_modulate = Color( 12, 1, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 338.0
margin_top = 249.0
margin_right = 1011.0
margin_bottom = 371.0
custom_fonts/font = SubResource( 6 )
text = "Dead!


Press F to pay respects (and try again)
or
 press Q to quit to main menu"
align = 1
valign = 1

[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="wave_ended" from="SpawnPoints" to="." method="_on_SpawnPoints_wave_ended"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="StartTimer" method="_on_StartTimer_timeout"]
